--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,9 @@ on:
     branches: [main]
 
 env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID_FRONTEND: ${{ secrets.VERCEL_PROJECT_ID_FRONTEND }}
-  VERCEL_PROJECT_ID_BACKEND: ${{ secrets.VERCEL_PROJECT_ID_BACKEND }}
+  VERCEL_ORG_ID: ${{ vars.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID_FRONTEND: ${{ vars.VERCEL_PROJECT_ID_FRONTEND }}
+  VERCEL_PROJECT_ID_BACKEND: ${{ vars.VERCEL_PROJECT_ID_BACKEND }}
 
 jobs:
   deploy-frontend:
@@ -22,14 +22,14 @@ jobs:
         with:
           node-version: '18'
           
+      - name: Install pnpm
+        run: npm install -g pnpm
+        
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
         
       - name: Build frontend
-        run: |
-          cd apps/frontend
-          npm ci
-          npm run build
+        run: pnpm --filter dublindash-frontend build
           
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
@@ -56,14 +56,14 @@ jobs:
         with:
           node-version: '18'
           
+      - name: Install pnpm
+        run: npm install -g pnpm
+        
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
         
       - name: Build backend
-        run: |
-          cd apps/backend
-          npm ci
-          npm run build
+        run: pnpm --filter dublindash-backend build
           
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
