--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,7 +1,8 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "cd ../.. && pnpm install && pnpm --filter dublindash-backend build",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
+  "devCommand": "pnpm run dev",
   "functions": {
     "dist/index.js": {
       "runtime": "@vercel/node@3.0.7",
