--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,14 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
+          
+      - uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'pnpm'
           
-      - name: Install pnpm
-        run: npm install -g pnpm
-        
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
         
@@ -34,9 +36,19 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
         
+      - name: Debug paths
+        run: |
+          pwd
+          ls -la
+          ls -la apps/
+          ls -la apps/frontend/
+          
       - name: Deploy to Vercel
-        run: vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: ./apps/frontend
+        run: |
+          cd apps/frontend
+          pwd
+          ls -la
+          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
 
   deploy-backend:
     runs-on: ubuntu-latest
@@ -45,14 +57,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
+          
+      - uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'pnpm'
           
-      - name: Install pnpm
-        run: npm install -g pnpm
-        
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
         
@@ -63,5 +77,8 @@ jobs:
         run: npm install --global vercel@latest
         
       - name: Deploy to Vercel
-        run: vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: ./apps/backend
+        run: |
+          cd apps/backend
+          pwd
+          ls -la
+          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
