--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           cd apps/frontend
           pwd
           ls -la
-          vercel deploy --prebuilt dist --prod --token=${{ secrets.VERCEL_TOKEN }}
+          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
 
   deploy-backend:
     runs-on: ubuntu-latest
@@ -81,4 +81,4 @@ jobs:
           cd apps/backend
           pwd
           ls -la
-          vercel deploy --prebuilt dist --prod --token=${{ secrets.VERCEL_TOKEN }}
+          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
