--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,35 +50,38 @@ jobs:
           ls -la
           vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
 
-  deploy-backend:
-    runs-on: ubuntu-latest
-    env:
-      VERCEL_PROJECT_ID: ${{ vars.VERCEL_PROJECT_ID_BACKEND }}
-    steps:
-      - uses: actions/checkout@v4
-      
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: false
-          
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'pnpm'
-          
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-        
-      - name: Build backend
-        run: pnpm --filter dublindash-backend build
-          
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-        
-      - name: Deploy to Vercel
-        run: |
-          cd apps/backend
-          pwd
-          ls -la
-          vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
+  # Backend deployment disabled - WebSockets not supported on Vercel
+  # See docs/BACKEND-DEPLOYMENT.md for alternatives (Railway, Render, Fly.io)
+  # 
+  # deploy-backend:
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     VERCEL_PROJECT_ID: ${{ vars.VERCEL_PROJECT_ID_BACKEND }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     
+  #     - uses: pnpm/action-setup@v4
+  #       with:
+  #         version: 10
+  #         run_install: false
+  #         
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '18'
+  #         cache: 'pnpm'
+  #         
+  #     - name: Install dependencies
+  #       run: pnpm install --no-frozen-lockfile
+  #       
+  #     - name: Build backend
+  #       run: pnpm --filter dublindash-backend build
+  #         
+  #     - name: Install Vercel CLI
+  #       run: npm install --global vercel@latest
+  #       
+  #     - name: Deploy to Vercel
+  #       run: |
+  #         cd apps/backend
+  #         pwd
+  #         ls -la
+  #         vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
