--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -1,32 +1,9 @@
-# Build stage
-FROM node:18-alpine AS builder
-WORKDIR /app
-
-# Install pnpm
-RUN npm install -g pnpm@10
-
-# Copy workspace files
-COPY package.json pnpm-workspace.yaml pnpm-lock.yaml ./
-COPY packages/shared/package.json ./packages/shared/
-COPY apps/frontend/package.json ./apps/frontend/
-
-# Install dependencies
-RUN pnpm install --frozen-lockfile
-
-# Copy source code
-COPY packages/shared ./packages/shared
-COPY apps/frontend ./apps/frontend
-
-# Build frontend
-WORKDIR /app/apps/frontend
-RUN pnpm run build
-
-# Production stage
+# Simple nginx server serving pre-built frontend
 FROM nginx:stable-alpine
 RUN apk add jq
 
-COPY --from=builder /app/apps/frontend/nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/apps/frontend/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY dist/ /usr/share/nginx/html
 EXPOSE 3000
 
 # This will inject environment variables into env.js at runtime
