--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,8 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@enable3d/ammo-physics": "^0.26.1",
+    "@enable3d/three-graphics": "^0.26.1",
     "@tresjs/cientos": "^3.9.0",
     "@tresjs/core": "^4.0.0",
     "@vitejs/plugin-vue": "^5.2.4",
@@ -20,13 +22,13 @@
     "poisson-disk-sampling": "^2.3.1",
     "simplex-noise": "^4.0.3",
     "socket.io-client": "^4.7.4",
-    "three": "^0.160.0",
+    "three": "^0.171.0",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "@types/three": "^0.160.0",
+    "@types/three": "^0.171.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
